fix: add RBAC scope control and security improvements